# przykladowe

./: README.md  credi card fraud prediticition.py  download film.py  gold price prediction.py
Java/tictactoe/: BotMove.java  ButtonListener.java  CheckWin.java  DrawWinningLine.java  GetPlayerSigns.java  IsBoradFull.java  Main.java  ResetGame.java  StartGame.java  Static.java  TicTacToeGUI.java
bouncing balls/: CMakeLists.txt  ball.cpp  eventHandling.cpp  eventHandling.h  gui.cpp  gui.h  imageloader.cpp  imageloader.h  main.cpp  tinyfiledialogs.c  tinyfiledialogs.h
download.clenear/: sortowanie.py  sortowanie_gui.py  sortowanie_logika.py
handtracking/: handTrackingModule.py  main.py
imageProcessor/: photoEditor.py
